--- a/main.html
+++ b/main.html
@@ -8,6 +8,28 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="" method="get">
+            <label for="name">Name</label>
+            <input type="text" placeholder="Name" id="name">
+            <br><br>
+            <label for="phone">Phone Number</label>
+            <input type="text" placeholder="Phone Number" id="phone">
+            <br><br>
+            <label for="address">Address</label>
+            <input type="text" placeholder="Address" id="address">
+            <br><br>
+            <label for="checkbox">Have you ever lived with a Dog before?</label>
+            <input type="checkbox" id="checkbox" value="Have you ever lived with a Dog before?">
+            <br><br>
+            <label for="multiSelect">Please select your preferred breeds</label>
+            <select multiple id="multiSelect">
+                <option value="">Husky</option>
+                <option value="">German Shephard</option>
+                <option value="">Golden Retriever</option>
+            </select>
+            <br><br>
+            <button id="submit" type="submit" value="Submit">Submit</button>
+        </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
