--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
                 <option value="">Golden Retriever</option>
             </select>
             <br><br>
-            <button id="submit" type="submit" value="Submit">Submit</button>
+            <input type="submit" id="submit" value="Submit">
         </form>
     <script type="text/javascript" src="./script.js">
 </script>
